--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,37 +9,43 @@ on:
   - cron: "0 2 * * 1"
 
 
-env:
+  env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
 
 jobs:
-  test:
-    name: Test Rust ${{ matrix.rust }} on ${{ matrix.os }}
+  build:
+    name: Build and Test on rust ${{ matrix.rust }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - { rust: stable,           os: ubuntu-latest }
-          - { rust: stable,           os: macos-latest }
-          - { rust: stable,           os: windows-latest }
-          - { rust: stable-i686-msvc, os: windows-latest }
-          - { rust: beta,             os: ubuntu-latest }
-          - { rust: nightly,          os: ubuntu-latest }
+          - { rust: stable,           os: ubuntu-20.04 }
+          - { rust: beta,             os: ubuntu-20.04 }
+          - { rust: nightly,          os: ubuntu-20.04 }
     steps:
       - uses: actions/checkout@v2
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: ${{ matrix.rust }}
-      - run: cargo build --verbose
-      - run: cargo test --verbose --workspace
-      - run: cargo test --verbose --workspace --all-features
-      - run: cargo test --verbose --workspace --no-default-features
+      - name: Install dependencies
+        run: |
+          sudo apt-get update -y -qq
+          sudo apt-get install -y libsdl2-dev libsdl2-mixer-dev libsdl2-gfx-dev libsdl2-image-dev libsdl2-ttf-dev
+      - name: Build      
+        run: |
+          cargo build --verbose
+      - name: Test
+        run: |
+          cargo test --verbose
+      - name: Build Example
+        run: |
+          cargo build --examples --verbose
 
   clippy:
     name: Lint with clippy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       RUSTFLAGS: -Dwarnings
     steps:
@@ -47,13 +53,12 @@ jobs:
       - uses: hecrj/setup-rust-action@v1
         with:
           components: clippy
-      - run: cargo clippy --workspace --all-targets --verbose
-      - run: cargo clippy --workspace --all-targets --verbose --no-default-features
-      - run: cargo clippy --workspace --all-targets --verbose --all-features
+      - run: |
+          cargo clippy --workspace --all-targets --verbose
 
   rustfmt:
     name: Verify code formatting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: hecrj/setup-rust-action@v1
