--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ categories = []
 
 [dependencies]
 paste = "1.0"
+
+[dev-dependencies]
+sdl2 = { version = "0.34", features = ["gfx"] }
+cgmath = "0.18.0"
+rand = "0.8"
